--- a/djangocrud/grocery/templates/grocery/index.html
+++ b/djangocrud/grocery/templates/grocery/index.html
@@ -8,53 +8,27 @@
         <link rel="stylesheet"
               href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
         <link rel="stylesheet" href="{% static 'grocery/css/global.css' %}" />
-        <link rel="stylesheet" href="{% static 'grocery/css/global.css' %}" />
         <link rel="stylesheet" href="{% static 'grocery/css/single-item.css' %}" />
         <link rel="stylesheet" href="{% static 'grocery/css/items.css' %}" />
     </head>
     <body>
         <section class="section-center">
+            <!-- Items List -->
             <div class="items">
-                <div class="single-item">
-                    <input type="checkbox" checked />
-                    <p style="text-decoration: line-through">milk</p>
-                    <a href="#" class="btn icon-btn edit-btn">
-                        <i class="fa-regular fa-pen-to-square"></i>
-                    </a>
-                    <button class="btn icon-btn remove-btn" type="submit">
-                        <i class="fa-regular fa-trash-can"></i>
-                    </button>
-                </div>
-                <div class="single-item">
-                    <input type="checkbox" checked />
-                    <p style="text-decoration: line-through">bread</p>
-                    <a href="#" class="btn icon-btn edit-btn">
-                        <i class="fa-regular fa-pen-to-square"></i>
-                    </a>
-                    <button class="btn icon-btn remove-btn" type="submit">
-                        <i class="fa-regular fa-trash-can"></i>
-                    </button>
-                </div>
-                <div class="single-item">
-                    <input type="checkbox" />
-                    <p style="text-decoration: none">eggs</p>
-                    <a href="#" class="btn icon-btn edit-btn">
-                        <i class="fa-regular fa-pen-to-square"></i>
-                    </a>
-                    <button class="btn icon-btn remove-btn" type="submit">
-                        <i class="fa-regular fa-trash-can"></i>
-                    </button>
-                </div>
-                <div class="single-item">
-                    <input type="checkbox" />
-                    <p style="text-decoration: none">butter</p>
-                    <a href="#" class="btn icon-btn edit-btn">
-                        <i class="fa-regular fa-pen-to-square"></i>
-                    </a>
-                    <button class="btn icon-btn remove-btn" type="submit">
-                        <i class="fa-regular fa-trash-can"></i>
-                    </button>
-                </div>
+                {% for item in items %}
+                    <div class="single-item">
+                        <input type="checkbox" {% if item.completed %}checked{% endif %} />
+                        <p style="text-decoration: {% if item.completed %}line-through{% else %}none{% endif %}">{{ item.name }}</p>
+                        <a href="#" class="btn icon-btn edit-btn">
+                            <i class="fa-regular fa-pen-to-square"></i>
+                        </a>
+                        <button class="btn icon-btn remove-btn" type="submit">
+                            <i class="fa-regular fa-trash-can"></i>
+                        </button>
+                    </div>
+                {% empty %}
+                    <p style="text-align: center; color: #888;">No items yet. Add one above!</p>
+                {% endfor %}
             </div>
         </section>
     </body>
